--- a/assets/styles/helpers/_variables.scss
+++ b/assets/styles/helpers/_variables.scss
@@ -38,3 +38,4 @@ $beat: 10px;
 $padding-sm: 18px;
 $padding-md: 24px;
 $padding-lg: 144px;
+$vertical-spacing-md: 64px;
