--- a/assets/styles/pages/_portfolio.scss
+++ b/assets/styles/pages/_portfolio.scss
@@ -10,15 +10,11 @@ body.page-portfolio {
       padding-bottom: 48px;
     }
     @include media-lg {
-      padding-bottom: 120px;
+      padding-bottom: 101px;
     }
 
     .banner-top {
-      padding-bottom: 88px;
-
-      @include media-lg {
-        padding-bottom: 107px;
-      }
+      padding-top: 36px;
     }
 
     .banner-text {
@@ -45,18 +41,17 @@ body.page-portfolio {
 
     .property-grid {
       .property {
-        &.portrait {
-          margin-top: -72px;
+        &.portrait-large {
+          margin-top: -$vertical-spacing-md;
         }
       }
 
       @include media-sm {
         display: grid;
         direction: rtl;
-        grid-row-gap: 64px;
-        margin-bottom: 72px;
         align-items: stretch;
         grid-column-gap: 36px;
+        margin-bottom: $vertical-spacing-md;
         grid-template-columns: 1fr 1fr 1fr 1fr;
 
         > * {
@@ -66,14 +61,14 @@ body.page-portfolio {
         .property {
           margin-bottom: 0;
           position: relative;
+          align-self: end;
+          margin-top: $vertical-spacing-md;
 
           &:nth-child(-n+2) {
-            align-self: end;
-            margin-top: 72px;
           }
 
-          &.portrait {
-            margin-top: -178px;
+          &.portrait-large {
+            margin-top: -100%;
             grid-column: span 2;
           }
           &.landscape {
@@ -92,17 +87,14 @@ body.page-portfolio {
 
         .portfolio-statement {
           grid-column: 5 / 3;
+          padding-top: $vertical-spacing-md;
+
+          p {
+            margin: 0;
+          }
 
           .cta {
-            margin: 80px 0 0;
-          }
-        }
-      }
-
-      @include media-lg {
-        .property {
-          &.portrait {
-            margin-top: -248px;
+            margin: $vertical-spacing-md 0 0;
           }
         }
       }
